# autoclicker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: macos-dmg.yml
src/: auto_clicker.rs  lib.rs  main.rs
