[package]
name = "autoclicker"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.5"
device_query = "3"
crossbeam-channel = "0.5"

[dependencies.eframe]
version = "0.31"
optional = true

[dependencies.tray-icon]
version = "0.20"
optional = true

[features]
default = ["gui"]
gui = ["eframe", "tray-icon"]
